--- a/index.html
+++ b/index.html
@@ -4,54 +4,53 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>index</title>
   </head>
-  <body vlink="#551A8B" text="#000000" link="#0000EE" alink="#EE0000"
+  <body link="#0000EE" vlink="#551A8B" alink="#EE0000" text="#000000"
     bgcolor="#cccccc" background="cielo.jpeg">
     <div align="center">
       <h1><font style="font-size: 20pt" size="5"><b>PROPUESTA DEL
             AYUNTAMIENTO</b></font></h1>
-      <h1 align="right"><font style="font-size: 20pt" size="5"><b><img
-              moz-do-not-send="true"
-src="file:///home/slimbook/AAVV/ASAMBLEAS/eleccion_proyecto/pagina_web/logo.png"
-              alt="AVL Serena" width="166" height="95"></b></font></h1>
-      <table width="100%" cellspacing="2" cellpadding="2" border="1">
+      <img moz-do-not-send="true" src="logo.png" alt="Asociación Vecinal
+        La Serena" width="187" height="106" align="right">
+      <table width="100%" cellspacing="10" cellpadding="10" border="10">
         <tbody>
           <tr>
             <td valign="top">
               <p style="line-height: 100%; margin-bottom: 0cm"> </p>
-              <h2><font style="font-size: 14pt" size="+2"><b>1.
-                    RENOVACIÓN, MEJORA Y AMPLIACIÓN DE LAS ESQUINAS DE
-                    LA AVENIDA SCHULZ EN DETERMINADOS CRUCES</b></font></h2>
+              <h2><font style="font-size: 14pt"><b>1. RENOVACIÓN, MEJORA
+                    Y AMPLIACIÓN DE LAS ESQUINAS DE LA AVENIDA SCHULZ EN
+                    DETERMINADOS CRUCES</b></font></h2>
               <p style="line-height: 100%; margin-bottom: 0cm"><font
-                  style="font-size: 14pt" size="+2"><b> <br>
+                  style="font-size: 14pt"><b> <br>
                   </b></font></p>
-              <h3 align="justify"><font style="font-size: 14pt"
-                  size="+2">Se pretende con estas obras, ampliar aceras
-                  en determinados cruces mediante la construcción de
+              <h3 align="justify"><font style="font-size: 14pt">Se
+                  pretende con estas obras, ampliar aceras en
+                  determinados cruces mediante la construcción de
                   orejetas que aumenten la seguridad en los pasos
                   peatonales y generen a su vez áreas estanciales o de
                   uso hostelero.</font></h3>
-              <h3 align="justify"><font size="+2"> <font
-                    style="font-size: 14pt"><b>Presupuesto: 166.000,00
-                      euros</b></font></font></h3>
+              <h3 align="justify"> <font style="font-size: 14pt"><b>Presupuesto:
+
+
+                    166.000,00 euros</b></font></h3>
               <p><br>
               </p>
             </td>
             <td valign="top">
               <h2 style="line-height: 100%; margin-bottom: 0cm"> </h2>
-              <h2 style="line-height: 100%; margin-bottom: 0cm"><font
-                  size="+2"><b><font style="font-size: 14pt">2.
-                      EJECUCIÓN DE PLATAFORMA ÚNICA DE LA CALLE PIN DE
-                      PRIA</font></b></font></h2>
-              <font size="+2"> <br>
-              </font>
-              <h3 align="justify"><font size="+2"> <font
-                    style="font-size: 14pt">Se pretende con esta
-                    actuación continuar con la semipeatonalizacion de la
-                    calle Pablo Olavide, manteniendo el mismo criterio
-                    estético y la solución en plataforma única</font></font></h3>
-              <h3 align="justify"><font size="+2"><font
-                    style="font-size: 14pt">&nbsp; <b>Presupuesto:
-                      166.000,00 €</b></font></font></h3>
+              <h2 style="line-height: 100%; margin-bottom: 0cm"><b><font
+                    style="font-size: 14pt">2. EJECUCIÓN DE PLATAFORMA
+                    ÚNICA DE LA CALLE PIN DE PRIA</font></b></h2>
+              <br>
+              <h3 align="justify"> <font style="font-size: 14pt">Se
+                  pretende con esta actuación continuar con la
+                  semipeatonalizacion de la calle Pablo Olavide,
+                  manteniendo el mismo criterio estético y la solución
+                  en plataforma única</font></h3>
+              <h3 align="justify"><font style="font-size: 14pt">&nbsp; <b>Presupuesto:
+
+
+
+                    166.000,00 €</b></font></h3>
               <p align="center"><b><a moz-do-not-send="true"
                     href="pin2.html">ENLACE</a></b><br>
               </p>
@@ -60,41 +59,42 @@ src="file:///home/slimbook/AAVV/ASAMBLEAS/eleccion_proyecto/pagina_web/logo.png"
           <tr>
             <td valign="top">
               <p style="line-height: 100%; margin-bottom: 0cm"> </p>
-              <h2><font style="font-size: 14pt" size="+2"><b>3.
-                    EJECUCIÓN DE PLATAFORMA ÚNICA DE LA CALLE SAN
-                    GUILLERMO</b></font></h2>
+              <h2><font style="font-size: 14pt"><b>3. EJECUCIÓN DE
+                    PLATAFORMA ÚNICA DE LA CALLE SAN GUILLERMO</b></font></h2>
               <p style="line-height: 100%; margin-bottom: 0cm"><font
-                  style="font-size: 14pt" size="+2"><b> <br>
+                  style="font-size: 14pt"><b> <br>
                   </b></font></p>
-              <h3 align="justify"><font style="font-size: 14pt"
-                  size="+2">En esta manzana situada al sur del distrito
-                  del Llano, las calles presentan aceras estrechas, con
-                  pendientes transversales importantes y con vados mal
-                  resueltos, haciéndolas inaccesibles e incómodas. Por
-                  ello se proyecta una solución en plataforma única que
+              <h3 align="justify"><font style="font-size: 14pt">En esta
+                  manzana situada al sur del distrito del Llano, las
+                  calles presentan aceras estrechas, con pendientes
+                  transversales importantes y con vados mal resueltos,
+                  haciéndolas inaccesibles e incómodas. Por ello se
+                  proyecta una solución en plataforma única que
                   resolvería todas estas deficiencias.</font></h3>
-              <h3 align="justify"><font size="+2"> <b><font
-                      style="font-size: 14pt">Presupuesto: 166.000,00
-                      euros</font></b></font></h3>
+              <h3 align="justify"> <b><font style="font-size: 14pt">Presupuesto:
+
+
+                    166.000,00 euros</font></b></h3>
               <p align="center"><b><a moz-do-not-send="true"
                     href="3sanguillermo.html">ENLACE</a></b><br>
               </p>
             </td>
             <td valign="top">
               <p style="line-height: 100%; margin-bottom: 0cm"> </p>
-              <h2><font style="font-size: 14pt" size="+2"><b>4.
-                    EQUIPAMIENTO ZONA PERROS</b></font></h2>
+              <h2><font style="font-size: 14pt"><b>4. EQUIPAMIENTO ZONA
+                    PERROS</b></font></h2>
               <p style="line-height: 100%; margin-bottom: 0cm"><font
-                  style="font-size: 14pt" size="+2"><b><br>
+                  style="font-size: 14pt"><b><br>
                   </b></font></p>
-              <h3 align="justify"><font size="+2"> <font
-                    style="font-size: 14pt">Es una demanda vecinal de
-                    todos los barrios de la ciudad, a la que pretende
-                    dársele respuesta revisando las zonas existentes,
-                    reubicando las más conflictivas y reponiendo el
-                    equipamiento deteriorado.</font></font></h3>
-              <h3 align="justify"><font size="+2"><font
-                    style="font-size: 14pt">Presupuesto: 166.000,00 €</font></font></h3>
+              <h3 align="justify"> <font style="font-size: 14pt">Es una
+                  demanda vecinal de todos los barrios de la ciudad, a
+                  la que pretende dársele respuesta revisando las zonas
+                  existentes, reubicando las más conflictivas y
+                  reponiendo el equipamiento deteriorado.</font></h3>
+              <h3 align="justify"><font style="font-size: 14pt">Presupuesto:
+
+
+                  166.000,00 €A</font></h3>
             </td>
           </tr>
         </tbody>
