--- a/index.html
+++ b/index.html
@@ -16,85 +16,93 @@
           <tr>
             <td valign="top">
               <p style="line-height: 100%; margin-bottom: 0cm"> </p>
-              <h2><font style="font-size: 14pt"><b>1. RENOVACIÓN, MEJORA
-                    Y AMPLIACIÓN DE LAS ESQUINAS DE LA AVENIDA SCHULZ EN
-                    DETERMINADOS CRUCES</b></font></h2>
+              <h2><font style="font-size: 14pt" size="-1"><b>1.
+                    RENOVACIÓN, MEJORA Y AMPLIACIÓN DE LAS ESQUINAS DE
+                    LA AVENIDA SCHULZ EN DETERMINADOS CRUCES</b></font></h2>
+              <font size="-1"> </font>
               <p style="line-height: 100%; margin-bottom: 0cm"><font
-                  style="font-size: 14pt"><b> <br>
+                  style="font-size: 14pt" size="-1"><b> <br>
                   </b></font></p>
-              <h3 align="justify"><font style="font-size: 14pt">Se
-                  pretende con estas obras, ampliar aceras en
-                  determinados cruces mediante la construcción de
+              <font size="-1"> </font>
+              <h3 align="justify"><font style="font-size: 14pt"
+                  size="-1">Se pretende con estas obras, ampliar aceras
+                  en determinados cruces mediante la construcción de
                   orejetas que aumenten la seguridad en los pasos
                   peatonales y generen a su vez áreas estanciales o de
                   uso hostelero.</font></h3>
-              <h3 align="justify"> <font style="font-size: 14pt"><b>Presupuesto:
-
-
-                    166.000,00 euros</b></font></h3>
+              <font size="-1"> </font>
+              <h3 align="justify"> <font style="font-size: 14pt"
+                  size="-1"><b>Presupuesto: 166.000,00 euros</b></font></h3>
+              <font size="-1"> </font>
               <p><br>
               </p>
             </td>
             <td valign="top">
               <h2 style="line-height: 100%; margin-bottom: 0cm"> </h2>
-              <h2 style="line-height: 100%; margin-bottom: 0cm"><b><font
-                    style="font-size: 14pt">2. EJECUCIÓN DE PLATAFORMA
-                    ÚNICA DE LA CALLE PIN DE PRIA</font></b></h2>
-              <br>
-              <h3 align="justify"> <font style="font-size: 14pt">Se
-                  pretende con esta actuación continuar con la
-                  semipeatonalizacion de la calle Pablo Olavide,
+              <h2 style="line-height: 100%; margin-bottom: 0cm"><font
+                  size="-1"><b><font style="font-size: 14pt">2.
+                      EJECUCIÓN DE PLATAFORMA ÚNICA DE LA CALLE PIN DE
+                      PRIA</font></b></font></h2>
+              <font size="-1"> <br>
+              </font>
+              <h3 align="justify"> <font style="font-size: 14pt"
+                  size="-1">Se pretende con esta actuación continuar con
+                  la semipeatonalizacion de la calle Pablo Olavide,
                   manteniendo el mismo criterio estético y la solución
                   en plataforma única</font></h3>
-              <h3 align="justify"><font style="font-size: 14pt">&nbsp; <b>Presupuesto:
-
-
-
-                    166.000,00 €</b></font></h3>
-              <p align="center"><b><a moz-do-not-send="true"
-                    href="pin2.html">ENLACE</a></b><br>
+              <font size="-1"> </font>
+              <h3 align="justify"><font style="font-size: 14pt"
+                  size="-1">&nbsp; <b>Presupuesto: 166.000,00 €</b></font></h3>
+              <font size="-1"> </font>
+              <p align="center"><font size="-1"><b><a
+                      moz-do-not-send="true" href="pin2.html">ENLACE</a></b></font><br>
               </p>
             </td>
           </tr>
           <tr>
             <td valign="top">
               <p style="line-height: 100%; margin-bottom: 0cm"> </p>
-              <h2><font style="font-size: 14pt"><b>3. EJECUCIÓN DE
-                    PLATAFORMA ÚNICA DE LA CALLE SAN GUILLERMO</b></font></h2>
+              <h2><font style="font-size: 14pt" size="-1"><b>3.
+                    EJECUCIÓN DE PLATAFORMA ÚNICA DE LA CALLE SAN
+                    GUILLERMO</b></font></h2>
+              <font size="-1"> </font>
               <p style="line-height: 100%; margin-bottom: 0cm"><font
-                  style="font-size: 14pt"><b> <br>
+                  style="font-size: 14pt" size="-1"><b> <br>
                   </b></font></p>
-              <h3 align="justify"><font style="font-size: 14pt">En esta
-                  manzana situada al sur del distrito del Llano, las
-                  calles presentan aceras estrechas, con pendientes
-                  transversales importantes y con vados mal resueltos,
-                  haciéndolas inaccesibles e incómodas. Por ello se
-                  proyecta una solución en plataforma única que
+              <font size="-1"> </font>
+              <h3 align="justify"><font style="font-size: 14pt"
+                  size="-1">En esta manzana situada al sur del distrito
+                  del Llano, las calles presentan aceras estrechas, con
+                  pendientes transversales importantes y con vados mal
+                  resueltos, haciéndolas inaccesibles e incómodas. Por
+                  ello se proyecta una solución en plataforma única que
                   resolvería todas estas deficiencias.</font></h3>
-              <h3 align="justify"> <b><font style="font-size: 14pt">Presupuesto:
-
-
-                    166.000,00 euros</font></b></h3>
-              <p align="center"><b><a moz-do-not-send="true"
-                    href="3sanguillermo.html">ENLACE</a></b><br>
+              <font size="-1"> </font>
+              <h3 align="justify"> <font size="-1"><b><font
+                      style="font-size: 14pt">Presupuesto: 166.000,00
+                      euros</font></b></font></h3>
+              <font size="-1"> </font>
+              <p align="center"><font size="-1"><b><a
+                      moz-do-not-send="true" href="3sanguillermo.html">ENLACE</a></b></font><br>
               </p>
             </td>
             <td valign="top">
               <p style="line-height: 100%; margin-bottom: 0cm"> </p>
-              <h2><font style="font-size: 14pt"><b>4. EQUIPAMIENTO ZONA
-                    PERROS</b></font></h2>
+              <h2><font style="font-size: 14pt" size="-1"><b>4.
+                    EQUIPAMIENTO ZONA PERROS</b></font></h2>
+              <font size="-1"> </font>
               <p style="line-height: 100%; margin-bottom: 0cm"><font
-                  style="font-size: 14pt"><b><br>
+                  style="font-size: 14pt" size="-1"><b><br>
                   </b></font></p>
-              <h3 align="justify"> <font style="font-size: 14pt">Es una
-                  demanda vecinal de todos los barrios de la ciudad, a
-                  la que pretende dársele respuesta revisando las zonas
-                  existentes, reubicando las más conflictivas y
-                  reponiendo el equipamiento deteriorado.</font></h3>
-              <h3 align="justify"><font style="font-size: 14pt">Presupuesto:
-
-
-                  166.000,00 €A</font></h3>
+              <font size="-1"> </font>
+              <h3 align="justify"> <font style="font-size: 14pt"
+                  size="-1">Es una demanda vecinal de todos los barrios
+                  de la ciudad, a la que pretende dársele respuesta
+                  revisando las zonas existentes, reubicando las más
+                  conflictivas y reponiendo el equipamiento deteriorado.</font></h3>
+              <font size="-1"> </font>
+              <h3 align="justify"><font style="font-size: 14pt"
+                  size="-1">Presupuesto: 166.000,00 €A</font></h3>
             </td>
           </tr>
         </tbody>
