--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   uso hostelero.</font></h3>
               <font size="-1"> </font>
               <h3 align="justify"> <font style="font-size: 14pt"
-                  size="-1"><b>Presupuesto: 166.000,00 euros</b></font></h3>
+                  size="-1"><b>Presupuesto: 166.000,00 </b>€</font></h3>
               <font size="-1"> </font>
               <p><br>
               </p>
@@ -79,8 +79,8 @@
                   resolvería todas estas deficiencias.</font></h3>
               <font size="-1"> </font>
               <h3 align="justify"> <font size="-1"><b><font
-                      style="font-size: 14pt">Presupuesto: 166.000,00
-                      euros</font></b></font></h3>
+                      style="font-size: 14pt">Presupuesto: 166.000,00</font></b></font><font
+                  style="font-size: 14pt" size="-1"> €</font></h3>
               <font size="-1"> </font>
               <p align="center"><font size="-1"><b><a
                       moz-do-not-send="true" href="3sanguillermo.html">ENLACE</a></b></font><br>
@@ -102,7 +102,7 @@
                   conflictivas y reponiendo el equipamiento deteriorado.</font></h3>
               <font size="-1"> </font>
               <h3 align="justify"><font style="font-size: 14pt"
-                  size="-1">Presupuesto: 166.000,00 €A</font></h3>
+                  size="-1">Presupuesto: 6.000,00 €</font></h3>
             </td>
           </tr>
         </tbody>
